# try-auxum

./: .gitignore  Cargo.toml  Readme.md
exposed_web/: index.html
src/: ctx.rs  error.rs  main.rs  model.rs
src/web/: middleware_auth.rs  routes_login.rs  routes_tickets.rs
tests/: quick_dev.rs
