[package]
name = "axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version ="1", features = ["full"] }

## NOTE - Fixing verison to 0.6.12 because ServeDir bug in 0.6.15
##        https://github.com/tokio-rs/axum/issues/1931
axum = {version = "0.6.12", features = ["macros"]} # this is neede to use FromRef Macro to combine substates into appstate

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version ="0.4", features = ["fs", "trace"]} #activate filesystem access
tower-cookies = "0.9" #allows setting of cookies

lazy-regex = "2"

[dev-dependencies]
anyhow = "1.0"
#https://lib.rs/crates/httpc-test
#check usage in /tests/quick_dev.rs
httpc-test="0.1.1"
